--- a/my-app/webapp/src/app/app.component.html
+++ b/my-app/webapp/src/app/app.component.html
@@ -1,15 +1,23 @@
 <div class="app">
-  <h2 class="title">{{title}}</h2>
-  <div class="logo"><img src="assets/logo.svg" height="150px" alt="logo" /></div>
-  <div>
-    This project is generated with <b><a href="https://github.com/shpota/goxygen">goxygen</a></b>.
-    <p>
-      The following list of technologies comes from
-      a REST API call to the Go-based back end. Find
-      and change the corresponding code in
-      <code>webapp/src/app/tech/tech.component.ts</code>
-      and <code>server/web/app.go</code>.
-    </p>
-    <app-tech></app-tech>
-  </div>
+    <h2 class="title">{{title}}</h2>
+    <h5>Producteurs :</h5>
+    <div class= "container">
+        <div class="row">
+            <div *ngFor="let producer of producerList" class="col m4 s6">
+                <div class="card horizontal">
+                    <div class="card-image">
+                        <img [src]="producer.picture"/>
+                    </div>
+                    <div class="card-stacked">
+                        <div class = "card-content">
+                            <p>{{producer.name}}</p>
+                            <p><small>Création du compte: {{producer.created.getDate()}}/{{producer.created.getMonth()+1}}/{{producer.created.getFullYear()}}</small></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <app-tech></app-tech>
+    </div>
 </div>
