--- a/local_eat/web/src/app/components/login/login.component.html
+++ b/local_eat/web/src/app/components/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row">
+        <form class="col s8 offset-l2">
+            <div class="card-panel" style="height: 75vh; margin-top: 100px;" >
+                <div class="row">
+                    <h4 class="center-align" style="margin-bottom: 50px;">Se connecter</h4>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Adresse mail (exemple@mail.com)*" id="email" type="email" class="validate">
+                        <label for="email" class="active">*champs obligatoires</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Mot de passe*" id="password" type="password" class="validate">
+                        <label for="password" class="active">*champs obligatoires</label>
+                    </div>
+                </div>
+
+                <div class="row" class="center-align">
+                    <div class="input-field col s12">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Se connecter</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
