--- a/local_eat/web/src/app/components/signup/signup.component.html
+++ b/local_eat/web/src/app/components/signup/signup.component.html
@@ -3,14 +3,10 @@
         <form class="col s8 offset-l2">
             <div class="card-panel" style="height: 75vh; margin-top: 100px;" >
                 <div class="row">
-                    <h4 class="center-align">Se connecter</h4>
-                    <div class="input-field col s6" >
-                        <input placeholder="Prénom*" id="first_name" type="text" class="validate">
+                    <h4 class="center-align" style="margin-bottom: 50px;">S'inscrire</h4>
+                    <div class="input-field col s12" >
+                        <input placeholder="Nom utilisateur*" id="first_name" type="text" class="validate">
                         <label for="first_name" class="active">*champs obligatoires</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input placeholder="Nom*" id="last_name" type="text" class="validate">
-                        <label for="last_name" class="active">*champs obligatoires</label>
                     </div>
                 </div>
                 <div class="row">
