--- a/local_eat/web/src/app/components/nav/nav.component.html
+++ b/local_eat/web/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper green">
-        <a href="/" class="brand-logo"><img src="./assets/logo.png"></a>
+        <a href="/" class="brand-logo" style="margin-left: 10px; margin-top: 10px;"><img src="./assets/logo.png"></a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
