--- a/local_eat/web/src/app/components/nav/nav.component.html
+++ b/local_eat/web/src/app/components/nav/nav.component.html
@@ -25,11 +25,13 @@
 <div class="row">
     <div class="col s12">
         <ul class="tabs">
-            <li class="tab col s3"></li>
+            <li class="tab col s1"></li>
             <li class="tab col s2"><a href="producers">Producteurs</a></li>
             <li class="tab col s2"><a href="products">Produits</a></li>
             <li class="tab col s2"><a href="recipes">Recettes</a></li>
             <li class="tab col s2"><a href="news">Actualités</a></li>
+            <li class="tab col s2"></li>
+            <li class="tab col s1"><button (click)="redirectToRegisterProducers()">Devenir producteurs</button></li>
         </ul>
     </div>
 </div>
