--- a/local_eat/web/src/app/components/producers/producers.component.html
+++ b/local_eat/web/src/app/components/producers/producers.component.html
@@ -1,4 +1,5 @@
 <div class="app">
+    <app-nav></app-nav>
     <div class= "container">
         <div class="row">
             <h5>Producteurs :</h5>
