Ajout des produits + tentative ajout table producers

--- a/local_eat/web/src/app/components/products/products.component.html
+++ b/local_eat/web/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 
-  <h1>Produits :</h1>
-  <div class="row" >
+<h2>Produits :</h2>
+<div class="row" >
     <div class="col s12">
 
         <ul class="col s2">
@@ -11,7 +11,7 @@
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Miel</span>
-                    <p><a href="#">plus d'infos</a></p>
+                    <p><a href="#">plus d'informations</a></p>
                 </div>
                 <div class="card-action">
                     <a href="#">Producteurs</a>
@@ -95,3 +95,4 @@
         </ul>
     </div>
 </div>
+<h2>Recettes :</h2>
