--- a/local_eat/web/src/app/components/nav/nav.component.html
+++ b/local_eat/web/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav >
     <div class="nav-wrapper green">
         <a href="/" class="brand-logo" style="margin-left: 10px; margin-top: 10px;"><img src="./assets/logo.png"></a>
 
@@ -22,7 +22,7 @@
     </div>
 </nav>
 
-<div class="row">
+<div class="row" style="margin-bottom: 5%">
     <div class="col s12">
         <ul class="tabs">
             <li class="tab col s1"></li>
