--- a/local_eat/web/src/app/components/nav/nav.component.html
+++ b/local_eat/web/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
             </li>
             <li *ngIf="isAuthenticated">
                 <a href="/profil">
-                  <img src="../../../assets/profil_unkown.jpg" alt="Image de profil" style="width:30px; height: 30px; border-radius: 50%;">
+                  <img src="../../../assets/profil_unknown.jpg" alt="Image de profil" style="width:30px; height: 30px; border-radius: 50%;">
                 </a>
               </li>
               <li *ngIf="!isAuthenticated"><a routerLink="/login">Connexion</a></li>
