adding possibilty of upload a file #15

--- a/local_eat/web/src/app/components/profile/profile.component.html
+++ b/local_eat/web/src/app/components/profile/profile.component.html
@@ -25,7 +25,7 @@
               
           </div>
           <div class="card-action">
-              <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)">
+              <input type="file" #fileInput style="display: none;">
               <a href="#">Modifier</a>
               <a href="#">Supprimer</a>
           </div>
@@ -84,3 +84,5 @@
     </ng-container>
   </div>
 </div>
+
+<app-products-management></app-products-management>
