--- a/local_eat/web/src/app/components/signup/signup.component.html
+++ b/local_eat/web/src/app/components/signup/signup.component.html
@@ -1,43 +1,29 @@
-<div class="container">
-    <div class="row">
-        <form class="col s8 offset-l2" [formGroup]="signupForm" (submit)="signup()">
-            <div class="card-panel" style="height: 75vh; margin-top: 100px;" >
-                <div class="row">
-                    <h4 class="center-align">S'enregistrer</h4>
-                    <div class="input-field col s12" >
-                        <input placeholder="Nom d'utilisateur*" id="first_name" type="text" class="validate" [(ngModel)]="username" name="username" formControlName="usernameValid" required>
-                        <label for="first_name" class="active">Nom d'utilisateur *</label>
-                        <div class="form-error" *ngIf="signupForm.get('usernameValid')?.touched && !signupForm.get('usernameValid')?.valid">
-                            <div *ngIf="signupForm.get('usernameValid')?.errors?.['required']">Nom d'utilisateur requis</div>
-                        </div>
-                    </div>
+<div class="signup-container">
+    <div class="signup-card">
+        <div class="signup-card_title">
+            <h1>Crée un compte</h1>
+            <span>Vous avez déjà un compte? <a href="/login">Connectez-vous</a></span>
+        </div>
+        <div class="signup-form">
+            <form [formGroup]="signupForm" (submit)="signup()">
+                <input placeholder="Nom d'utilisateur*" id="first_name" type="text" [(ngModel)]="username" name="username" formControlName="usernameValid" required>
+                <div class="form-error" *ngIf="signupForm.get('usernameValid')?.touched && !signupForm.get('usernameValid')?.valid">
+                    <div *ngIf="signupForm.get('usernameValid')?.errors?.['required']">Nom d'utilisateur requis</div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input placeholder="Adresse mail (mail@example.com)*" id="email" type="email" class="validate" [(ngModel)]="email" name="email" formControlName="emailValid" required>
-                        <label for="email" class="active">Email *</label>
-                        <div class="form-error" *ngIf="signupForm.get('emailValid')?.touched && !signupForm.get('emailValid')?.valid">
-                            <div *ngIf="signupForm.get('emailValid')?.errors?.['required']">Email requis</div>
-                            <div *ngIf="signupForm.get('emailValid')?.errors?.['email'] && !signupForm.get('emailValid')?.errors?.['required']">Invalid email</div>
-                        </div>
-                    </div>
+                <input placeholder="Email" id="email" type="email" [(ngModel)]="email" name="email" formControlName="emailValid" required>
+                <div class="form-error" *ngIf="signupForm.get('emailValid')?.touched && !signupForm.get('emailValid')?.valid">
+                    <div *ngIf="signupForm.get('emailValid')?.errors?.['required']">Email requis</div>
+                    <div *ngIf="signupForm.get('emailValid')?.errors?.['email'] && !signupForm.get('emailValid')?.errors?.['required']">Email invalide</div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input placeholder="Mot de passe*" id="password" type="password" class="validate" [(ngModel)]="password" name="password" formControlName="passwordValid" required>
-                        <label for="password" class="active">Mot de passe *</label>
-                        <div class="form-error" *ngIf="signupForm.get('passwordValid')?.touched && !signupForm.get('passwordValid')?.valid">
-                            <div *ngIf="signupForm.get('passwordValid')?.errors?.['required']">Mot de passe requis</div>
-                            <div *ngIf="signupForm.get('passwordValid')?.errors?.['minlength']">Le mot de passe doit être de 8 charactères minimum</div>
-                        </div>
-                    </div>
+                <input placeholder="Mot de passe*" id="password" type="password" [(ngModel)]="password" name="password" formControlName="passwordValid" required>
+                <div class="form-error" *ngIf="signupForm.get('passwordValid')?.touched && !signupForm.get('passwordValid')?.valid">
+                    <div *ngIf="signupForm.get('passwordValid')?.errors?.['required']">Mot de passe requis</div>
+                    <div *ngIf="signupForm.get('passwordValid')?.errors?.['minlength']">Le mot de passe doit être de 8 charactères minimum</div>
                 </div>
-                <div class="row" class="center-align">
-                    <div class="input-field col s12">
-                        <button class="btn waves-effect waves-light" type="submit" name="action" [disabled]="!signupForm.valid">S'enregistrer</button>
-                    </div>
+                <div class="button-holder">
+                    <button type="submit" name="action" [disabled]="!signupForm.valid">S'enregistrer</button>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
