login and signup corresponding background with main page

--- a/local_eat/web/src/app/components/login/login.component.scss
+++ b/local_eat/web/src/app/components/login/login.component.scss
@@ -13,11 +13,7 @@
     align-items: center !important;
     display: flex !important;
     justify-content: center !important;
-    background-image: radial-gradient(
-        circle farthest-corner at 10% 20%,
-        rgba(253, 101, 133, 1) 0%,
-        rgba(255, 211, 165, 1) 90%
-    ) !important;
+    background-color: #808000 !important;
 }
 
 .login-card {
